--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -1,7 +1,7 @@
 
 .container {
     width: 100%;
-    background-image:url('/assets/i.jpg') }
+     }
 
 .nano { background-image: url('/assets/f.jpg'); width: auto; height: 500px; }
 .nano .content{ padding: 10px; }
