--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -3,7 +3,7 @@
     width: 100%;
      }
 
-.nano { background-image: url('/assets/f.jpg'); width: auto; height: 500px; }
+.nano { background: #444; width: auto; height: 500px; }
 .nano .content{ padding: 10px; }
 .nano .pane { background: #888; }
 .nano .slider { background: #111; }
