--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -5,6 +5,6 @@
 
 .nano { background: #444; width: auto; height: 500px; }
 .nano .content{ padding: 10px; }
-.nano .pane { background: #888; }
-.nano .slider { background: #111; }
+.nano .pane { background: #eee; }
+.nano .slider { background: #eee; }
 
